Add get verification status endpoint
